
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int dummy; } ;
struct sockaddr {int dummy; } ;
struct bootp {int dummy; } ;


 int MAX_MSG_SIZE ;
 int exit (int) ;
 int fprintf (int ,char*) ;
 int sendto (int,void const*,int ,int ,struct sockaddr const*,int) ;
 int server_addr ;
 int stderr ;

void sendpacket(int s, struct bootp *bp)
{
    if (sendto(s, (const void *) bp, MAX_MSG_SIZE, 0,
      (const struct sockaddr *) &server_addr,
      sizeof(struct sockaddr_in)) == -1) {
        fprintf(stderr, "sendpacket: sendto returned -1 ;(\n");
        exit(1);
    }
}
