; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19256.c_sendpacket.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_19256.c_sendpacket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bootp = type { i32 }
%struct.sockaddr = type { i32 }

@MAX_MSG_SIZE = common dso_local global i32 0, align 4
@server_addr = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [35 x i8] c"sendpacket: sendto returned -1 ;(\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @sendpacket(i32 %0, %struct.bootp* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.bootp*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.bootp* %1, %struct.bootp** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.bootp*, %struct.bootp** %4, align 8
  %7 = bitcast %struct.bootp* %6 to i8*
  %8 = load i32, i32* @MAX_MSG_SIZE, align 4
  %9 = call i32 @sendto(i32 %5, i8* %7, i32 %8, i32 0, %struct.sockaddr* bitcast (i32* @server_addr to %struct.sockaddr*), i32 4)
  %10 = icmp eq i32 %9, -1
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @stderr, align 4
  %13 = call i32 @fprintf(i32 %12, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @exit(i32 1) #3
  unreachable

15:                                               ; preds = %2
  ret void
}

declare dso_local i32 @sendto(i32, i8*, i32, i32, %struct.sockaddr*, i32) #1

declare dso_local i32 @fprintf(i32, i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
